<resources>
    <string name="app_name">Public Infrastructure Report</string>
    <string name="app_name_singkat">PIR Apps</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_profil">Profil</string>
    <string name="drawer_item_report">Laporan</string>
    <string name="drawer_item_laporan">Laporan Anda</string>
    <string name="nama">Nama Lengkap</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="daftar">Register</string>
    <string name="masukkan_email">Masukkan E-Mail anda</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="btn_link_to_register">Belum menjadi member? Daftar sekarang.</string>
    <string name="btn_link_to_login">Sudah terdaftar! Log in sekarang.</string>
    <string name="kirim">Post Laporan</string>
    <string name="judul">Judul</string>
    <string name="keluhan">Keluhan anda</string>
    <string name="err_msg_name">Masukkan nama lengkap anda</string>
    <string name="err_msg_email">Masukkan alamat E-Mail yang valid</string>
    <string name="err_msg_password">Masukkan password</string>
    <string name="err_msg_judul">Masukkan judul laporan</string>
    <string name="err_msg_isi">Masukkan keluhan anda</string>
    <string name="lokasi_anda">Lokasi anda</string>
    <string name="kategori">Kategori</string>
    <string name="jalan_raya">Jalan Raya</string>
    <string name="rambu_jalan">Rambu-rambu Jalan</string>
    <string name="traffic_light">Traffic Light</string>
    <string name="penerangan">Penerangan Jalan</string>
    <string name="halte_bus">Halte Bus</string>
    <string name="telepon_umum">Telepon Umum</string>
    <string name="title_activity_maps">Map</string>

    <!--<string-array name = "spinner_item">
        <item>Jalan Raya</item>
        <item>Rambu-rambu Jalan</item>
        <item>Traffic Light</item>
        <item>Penerangan Jalan</item>
        <item>Halte Bus</item>
        <item>Telepon Umum</item>
    </string-array>-->
</resources>